force-app/main/default/objects/TimerParametros__mdt/TimerParametros__mdt.object-meta.xml
<CustomObject>
    <description>US-418-1
@autor: carlosaraujo@deloitte.com
@date: 26/13/2023</description>
    <label>Timer Parâmetros</label>
    <pluralLabel>Timers Parâmetros</pluralLabel>
</CustomObject>