force-app/main/default/objects/TimerParametros__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Código</label>
    <length>50</length>
    <type>Text</type>
</CustomField>