force-app/main/default/objects/TimerParametros__mdt/fields/IntegrationProcName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationProcName__c</fullName>
    <label>Nome da Integration Procedure</label>
    <length>200</length>
    <type>Text</type>
</CustomField>