force-app/main/default/objects/TimerParametros__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Valor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>